CICD-153: do not set process title to 'statsd', so deployment run script can recognize pid

--- a/config.js.tmpl
+++ b/config.js.tmpl
@@ -1,5 +1,6 @@
 {
     debug: false,
+    title: false,
     opentsdbHost: '__OPENTSDB_HOST__',
     opentsdbPort: '__OPENTSDB_PORT__',
     opentsdbTagPrefix: '_t_',
